# MineSweeper

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt
include/: Broad.h  Buffer.h  Clock.h  CursesWrapper.h  Game.h  Sleep.h  Tui.h
lib/: CMakeLists.txt
src/: Broad.c  Buffer.c  Clock.c  Game.c  Main.c  Tui.c
